src/objects/Academic_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Academic Details</relationshipLabel>
        <relationshipName>Academic_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Highest_Qualification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Highest Qualification?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Institute_Address__c</fullName>
        <label>Institute Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Qualification__c</fullName>
        <label>Qualification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10th</fullName>
                </value>
                <value>
                    <fullName>12th</fullName>
                </value>
                <value>
                    <fullName>Graduate</fullName>
                </value>
                <value>
                    <fullName>PG</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Academic Detail</label>
    <nameField>
        <label>Academic Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Academic Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>